kind-arc-cicd-cluster/dev-team-1/simple-api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-api
  name: simple-api
  namespace: dev-team-1
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: simple-api-pod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: simple-api
    stack: dotnet
    version: 3.0.11
  name: simple-api
  namespace: dev-team-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-api-pod
  template:
    metadata:
      labels:
        app: simple-api-pod
    spec:
      containers:
      - env:
        - name: MyVar
          value: My Var
        - name: MyVar2
          value: My new value
        image: gperezivo/simple-api:9.0.0
        imagePullPolicy: Always
        name: api
        ports:
        - containerPort: 80
      resources:
        limits:
          cpu: 400m
          memory: 300Mi
        requests:
          cpu: 100m
          memory: 128Mi
