kind-arc-cicd-cluster/dev-team-1/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: stage-network-policy
  namespace: dev-team-1
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: stage
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 4438
